--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
                 <div class="w-full lg:w-5/12 relative group">
                     <div class="absolute -inset-4 bg-gradient-to-r from-primary to-secondary opacity-30 blur-2xl rounded-full group-hover:opacity-50 transition-opacity duration-500"></div>
                     <div class="relative rounded-2xl overflow-hidden border border-white/10 shadow-2xl bg-[#0a0a0a]" style="clip-path: polygon(10% 0, 100% 0, 100% 90%, 90% 100%, 0 100%, 0 10%);">
-                        <!-- Placeholder Image (Replaced Django static tag) -->
+                        <!-- Updated Image Path: Ensure extension matches your file (.png, .jpg, etc) -->
                         <div class="aspect-[4/5] bg-cover bg-center grayscale hover:grayscale-0 transition-all duration-700 bg-[#1a1a1a]" 
-                             style="background-image: url('https://placehold.co/600x800/1a1a1a/0df26c?text=HAVATH_IMG');">
+                             style="background-image: url('havath.png');">
                             <div class="absolute inset-0 bg-primary/10 mix-blend-overlay"></div>
                             <div class="absolute bottom-0 left-0 w-full p-6 bg-gradient-to-t from-black via-black/80 to-transparent">
                                 <div class="font-mono text-xs text-primary mb-1">ID: 5592-XK</div>
