--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <a href="#skills" class="hover:text-emerald-400 transition-colors">Skills</a>
                 <a href="#projects" class="hover:text-emerald-400 transition-colors">Projects</a>
                 <a href="#education" class="hover:text-emerald-400 transition-colors">Education</a>
-                <a href="resume/hadhi_havath.pdf" download class="px-5 py-2 rounded-full border border-emerald-500/50 text-emerald-400 hover:bg-emerald-500/10 transition-all flex items-center gap-2 group">
+                <!-- FIXED: Added leading slash / -->
+                <a href="/resume/hadhi_havath.pdf" download class="px-5 py-2 rounded-full border border-emerald-500/50 text-emerald-400 hover:bg-emerald-500/10 transition-all flex items-center gap-2 group">
                     Resume <i data-lucide="download" class="w-4 h-4 group-hover:translate-y-0.5 transition-transform"></i>
                 </a>
             </div>
@@ -81,7 +82,8 @@
             <a href="#skills" class="mobile-link text-left py-2 hover:text-emerald-400">Skills</a>
             <a href="#projects" class="mobile-link text-left py-2 hover:text-emerald-400">Projects</a>
             <a href="#education" class="mobile-link text-left py-2 hover:text-emerald-400">Education</a>
-            <a href="resume/hadhi_havath.pdf" download class="mt-2 text-center py-3 rounded bg-emerald-600/20 text-emerald-400 border border-emerald-600/50">
+            <!-- FIXED: Added leading slash / -->
+            <a href="/resume/hadhi_havath.pdf" download class="mt-2 text-center py-3 rounded bg-emerald-600/20 text-emerald-400 border border-emerald-600/50">
                 Download Resume
             </a>
         </div>
@@ -117,7 +119,8 @@
                         <a href="#contact" class="px-8 py-3 rounded-full bg-emerald-500 text-slate-950 font-bold hover:bg-emerald-400 transition-all shadow-[0_0_20px_rgba(16,185,129,0.3)]">
                             Contact Me
                         </a>
-                        <a href="resume/hadhi_havath.pdf" download class="px-8 py-3 rounded-full border border-slate-700 hover:border-emerald-500/50 hover:bg-emerald-500/5 text-slate-300 transition-all flex items-center gap-2">
+                        <!-- FIXED: Added leading slash / -->
+                        <a href="/resume/hadhi_havath.pdf" download class="px-8 py-3 rounded-full border border-slate-700 hover:border-emerald-500/50 hover:bg-emerald-500/5 text-slate-300 transition-all flex items-center gap-2">
                             <i data-lucide="download" class="w-4 h-4"></i> Download CV
                         </a>
                     </div>
@@ -128,8 +131,9 @@
                     <div class="relative w-64 h-64 md:w-80 md:h-80 group">
                         <div class="absolute inset-0 bg-gradient-to-tr from-emerald-500 to-cyan-500 rounded-full blur-2xl opacity-20 group-hover:opacity-40 transition-opacity duration-500 animate-pulse"></div>
                         <div class="absolute -inset-1 bg-gradient-to-r from-emerald-500 to-cyan-500 rounded-full opacity-30 group-hover:opacity-60 transition duration-500"></div>
+                        <!-- FIXED: Added leading slash / -->
                         <img 
-                            src="images/havath.png" 
+                            src="/images/havath.png" 
                             alt="Muhammed Hadhi Havath"
                             class="relative w-full h-full object-cover rounded-full border-4 border-slate-900 shadow-2xl z-10"
                             onerror="this.onerror=null;this.src='https://via.placeholder.com/400x400/0f172a/10b981?text=MHH';"
@@ -517,8 +521,9 @@
                     </div>
                 </div>
 
+                <!-- FIXED: Added leading slash / -->
                 <div class="mt-12 text-center">
-                    <a href="resume/hadhi_havath.pdf" download class="inline-flex items-center gap-2 px-8 py-3 bg-emerald-600 hover:bg-emerald-500 text-white rounded-full font-medium transition-all shadow-lg shadow-emerald-900/20">
+                    <a href="/resume/hadhi_havath.pdf" download class="inline-flex items-center gap-2 px-8 py-3 bg-emerald-600 hover:bg-emerald-500 text-white rounded-full font-medium transition-all shadow-lg shadow-emerald-900/20">
                         <i data-lucide="download" class="w-4 h-4"></i> Download Full Resume
                     </a>
                 </div>
