--- a/index.html
+++ b/index.html
@@ -155,14 +155,24 @@
                         I am actively pursuing self-study in cybersecurity and AI technologies, constantly seeking opportunities to challenge myself and grow.
                     </p>
                     
-                    <div class="grid grid-cols-2 gap-4 pt-4">
-                        <div class="p-4 rounded-lg bg-slate-950 border border-slate-800">
+                    <div class="flex flex-wrap gap-4 pt-4">
+                        <div class="flex-1 min-w-[140px] p-4 rounded-lg bg-slate-950 border border-slate-800">
                             <h4 class="text-emerald-400 font-bold mb-1">Problem Solver</h4>
                             <p class="text-xs text-slate-500">Ability to troubleshoot and resolve technical issues efficiently.</p>
                         </div>
-                        <div class="p-4 rounded-lg bg-slate-950 border border-slate-800">
+                        <div class="flex-1 min-w-[140px] p-4 rounded-lg bg-slate-950 border border-slate-800">
                             <h4 class="text-emerald-400 font-bold mb-1">Team Player</h4>
                             <p class="text-xs text-slate-500">Collaborative approach to working in diverse team environments.</p>
+                        </div>
+                        <div class="flex-1 min-w-[140px] p-4 rounded-lg bg-slate-950 border border-slate-800 relative overflow-hidden group">
+                            <div class="absolute top-0 right-0 w-8 h-8 bg-emerald-500/10 rounded-full blur-xl -z-10 group-hover:bg-emerald-500/20 transition-colors"></div>
+                            <h4 class="text-emerald-400 font-bold mb-1 flex items-center gap-2">
+                                Persistent
+                                <i data-lucide="crosshair" class="w-3 h-3 text-emerald-600"></i>
+                            </h4>
+                            <p class="text-xs text-slate-500">
+                                I don't quit. If I'm into something, I won't stop until I see it through to the very end.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -532,8 +542,7 @@
                     </div>
                     <div class="hidden md:block md:w-[45%]"></div>
                 </div>
-
-                </div>
+            </div>
         </div>
     </section>
 
